--- a/portpolio/src/main/resources/application.properties
+++ b/portpolio/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 ############################################
 # WebApplication  ( none : java  / servlet: web )
 spring.application.name=portpolio
-spring.main.web-application-type=servlet
+spring.main.web-application-type=none
 #server.port=8181
 #server.servlet.context-path=/boot1
 
@@ -12,13 +12,13 @@ spring.main.banner-mode=off
 
 # DataSource  
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/thejoa
+spring.datasource.url=jdbc:mysql://localhost:3306/mybook
 spring.datasource.username=root
 spring.datasource.password=1234
 
 # Jpa        -   sql   ( create/update )
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
