--- a/portpolio/src/main/resources/application.properties
+++ b/portpolio/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.main.banner-mode=off
 
 # DataSource  
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/thejoa
+spring.datasource.url=jdbc:mysql://localhost:3306/mybook
 spring.datasource.username=root
 spring.datasource.password=1234
 
